<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.upv.dsic.gti-ia</groupId>
	<artifactId>sfservices</artifactId>
	<packaging>war</packaging>
	<version>0.3</version>
	<name>SFSERVICES</name>
	<url>${basedir}/target/site</url>
	<!-- Indica de que proyecto desciende, heredaremos su configuración, librerías, plugins ... -->
	<parent>
		<artifactId>thomas</artifactId>
		<groupId>es.upv.dsic.gti-ia</groupId>
		<version>0.3</version>
		<relativePath>..</relativePath>
	</parent>
	<build>
		<finalName>sfservices</finalName>
	
	<plugins> <!-- mvn clean axis2-wsdl2code:wsdl2code -->
		<plugin>
			<groupId>org.apache.axis2</groupId>
			<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
			<version>1.4</version>
			<configuration>
				<packageName>
					wtp
				</packageName>
				<wsdlFile>
					./src/main/webapp/WEB-INF/services/RemoveProvider/META-INF/RemoveProvider.wsdl
				</wsdlFile>
				<databindingName>adb</databindingName>
				<generateServerSide>true</generateServerSide>
				<generateServicesXml>true</generateServicesXml>
				<namespaceURIs>
					<namespaceURI>
						<uri>http://wtp/</uri>
						<packageName>wtp</packageName>
					</namespaceURI>
				</namespaceURIs>
			</configuration>
		</plugin>
		<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.0.2</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
		</plugin>

			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.12</version>
					</dependency>
				</dependencies>
				<configuration>
				    <formats>
				    	<format>xml</format>
				    </formats>  
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin-->

	</plugins>
	</build>
	
	<reporting>
		<plugins>
			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>1g</maxmemory>
				</configuration>
			</plugin-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	
	<profiles>
		<profile>
			<id>metric</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>2.5.1</version>
						<configuration>
							<formats>
								<format>html</format>
								<format>xml</format>
							</formats>
							<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>GTI</id>
			<url>http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>codehaus</groupId>
			<artifactId>stax</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>es.upv.dsic.gti-ia</groupId>
			<artifactId>magentix2</artifactId>
			<version>2.0.3</version>
		</dependency>
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>jena</artifactId>
			<version>2.6.4</version>
		</dependency>
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>arq</artifactId>
			<version>2.8.7</version>
		</dependency>	
	</dependencies>
	
	<properties>
		<cobertura.maxmem>8292M</cobertura.maxmem>
		<maven.cobertura.instrumentation.maxmemory>8192M
		</maven.cobertura.instrumentation.maxmemory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compile.encoding>UTF-8</maven.compile.encoding>
		<maven.compile.fork>false</maven.compile.fork>
	</properties>
</project>
